insere coleta de conjuntos auxiliares de tipo e temas de proposicoes legislativas

--- a/coleta.ipynb
+++ b/coleta.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b0f8bd34-8963-4d8f-adeb-04019a9a5d6b",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "df699bd6-73f2-4648-958c-0a5fbfb7d1df",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "dd179a37-a485-482a-8bb7-7eccf56d9491",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "8bac77e7-ebde-41e4-a74a-75ed6f7e64e8",
    "metadata": {},
    "outputs": [],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "53d49864-8f79-45d2-a09a-0e5e846818f7",
    "metadata": {},
    "outputs": [],
@@ -156,10 +156,56 @@
   },
   {
    "cell_type": "markdown",
+   "id": "59bff90f-afa2-411e-9cbb-2dc5bfb79fc8",
+   "metadata": {},
+   "source": [
+    "# Dados de proposições legislativas entre jul. 1934 e dez. 2021"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "927ecd4a-5e26-49c4-aa54-3ec8db51be4d",
    "metadata": {},
    "source": [
-    "> Os dados referentes às proposições legislativas foram coletados manualmente, conforme explicitado no Relatório Técnico. Por esta razão sua coleta não consta nesse notebook."
+    "Proposições legislativas são projetos de lei, resoluções, medidas provisórias, emendas, pareceres e todos os outros tipos de proposições na Câmara dos Deputados.\n",
+    "\n",
+    "Os dados referentes às proposições legislativas foram coletados manualmente a partir de arquivos estáticos disponíveis em https://dadosabertos.camara.leg.br/swagger/api.html#staticfile, conforme explicitado no Relatório Técnico. Por esta razão sua coleta não consta nesse notebook."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7180b788-8676-464f-be5f-54a6158d68b7",
+   "metadata": {},
+   "source": [
+    "Para auxiliar a posterior análise dos dados das proposições legislativas, foram coletados os conjuntos de dados referentes aos temas e tipos de proposições:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b90dd6d-3666-4f62-be7f-3f5402f18831",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Temas\n",
+    "\n",
+    "temas = requests.get('https://dadosabertos.camara.leg.br/api/v2/referencias/proposicoes/codTema').json()\n",
+    "df_temas = pd.DataFrame.from_dict(temas['dados'])\n",
+    "df_temas.to_csv('dados/temas.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "56ebeb1b-c026-496c-81f7-dd33cf226f4d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Tipos\n",
+    "\n",
+    "tipos = requests.get('https://dadosabertos.camara.leg.br/api/v2/referencias/tiposProposicao').json()\n",
+    "df_tipos = pd.DataFrame.from_dict(tipos['dados'])\n",
+    "df_tipos.to_csv('dados/tipos.csv', index=False)"
    ]
   }
  ],
