atualiza insctrucoes no markdown

--- a/coleta.ipynb
+++ b/coleta.ipynb
@@ -44,7 +44,7 @@
    "id": "9ea6923f-be80-4e93-8486-fdd613ff703c",
    "metadata": {},
    "source": [
-    "Restrigimos os dados para as legislaturas de interesse, a partir de 1934."
+    "Restringimos os dados para as legislaturas de interesse, a partir de 1934."
    ]
   },
   {
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "8bac77e7-ebde-41e4-a74a-75ed6f7e64e8",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
    "id": "0d56c39f-f822-4206-8995-435990f16636",
    "metadata": {},
    "source": [
-    "A lista com os ids das legislaturas de interesse será utilizada no pré-processamento dos dados referentes às candidaturas eleitas no período."
+    "A lista com os ids das legislaturas de interesse será utilizada na coleta dos dados referentes às candidaturas eleitas no período."
    ]
   },
   {
