--- a/coleta.ipynb
+++ b/coleta.ipynb
@@ -59,6 +59,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "id": "1a863257-c2b1-4e3c-b5a7-ab3924965b2d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_legislaturas_1934_2023.to_csv('dados/legislaturas_1934_2023.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "id": "8bac77e7-ebde-41e4-a74a-75ed6f7e64e8",
    "metadata": {},
