--- a/tratamento-dados/tratamento-candidaturas-eleitas.ipynb
+++ b/tratamento-dados/tratamento-candidaturas-eleitas.ipynb
@@ -376,11 +376,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "8bbb23c3-8850-4929-9d95-e15c686157ef",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_deputadas.to_csv('../dados/candidaturas_eleitas.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
