--- a/tratamento-dados/tratamento-proposicoes.ipynb
+++ b/tratamento-dados/tratamento-proposicoes.ipynb
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 62,
    "id": "0a6a7653-5a70-43c0-95d1-8c90a51a3610",
    "metadata": {},
    "outputs": [
@@ -532,13 +532,23 @@
        "(152419, 8)"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_proposicoes.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "9160def1-26b9-4214-bca2-4a46b336a936",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_proposicoes.to_csv('../dados/proposicoes_legislativas.csv', index=False)"
    ]
   }
  ],
