--- a/tratamento-dados/tratamento-proposicoes.ipynb
+++ b/tratamento-dados/tratamento-proposicoes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "id": "aa696467-3811-42c7-993e-80b1f19bd0ca",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "id": "60b974d7-d1f0-410c-a4ea-32d2baaee348",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "id": "03a43433-f2c8-4275-9ad3-d4638479f339",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "id": "5c293a8b-5cc1-4573-a20e-197259abde89",
    "metadata": {},
    "outputs": [],
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "id": "09989088-961c-4bfc-a0a4-3636e3ae27b3",
    "metadata": {},
    "outputs": [
@@ -109,7 +109,7 @@
        "(680358, 30)"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "id": "b077e07c-e2d2-4868-abd1-0dee3a80882b",
    "metadata": {},
    "outputs": [],
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "id": "8a1006b0-a578-40d5-974a-39a9e1f3aacf",
    "metadata": {},
    "outputs": [],
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
    "id": "17225d4b-f3c2-49dc-afd2-4ed667464b59",
    "metadata": {},
    "outputs": [
@@ -171,7 +171,7 @@
        "(152424, 30)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
    "id": "61b5f27e-797e-4296-9aca-2bd1b8c78eb3",
    "metadata": {},
    "outputs": [],
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "id": "edabd958-2e7e-410b-94f8-7f446561deff",
    "metadata": {},
    "outputs": [
@@ -211,7 +211,7 @@
        "(152424, 8)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 11,
    "id": "eb49ff95-e45a-4d86-b1d2-6bc732b6d73c",
    "metadata": {},
    "outputs": [
@@ -248,7 +248,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 12,
    "id": "5805f5dd-023d-4136-90f7-7471a5e95ed1",
    "metadata": {},
    "outputs": [
@@ -377,7 +377,7 @@
        "571961      NaN  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 13,
    "id": "62ee15ca-49cc-4349-8c36-c590b6ac7b4f",
    "metadata": {},
    "outputs": [
@@ -506,7 +506,7 @@
        "571961      NaN  "
       ]
      },
-     "execution_count": 55,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 14,
    "id": "6a42c0f0-18f1-408c-a7c0-ce3bc7304371",
    "metadata": {},
    "outputs": [],
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 15,
    "id": "0a6a7653-5a70-43c0-95d1-8c90a51a3610",
    "metadata": {},
    "outputs": [
@@ -537,7 +537,7 @@
        "(152419, 8)"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 16,
    "id": "0aa209d9-1781-4dbf-a801-40bd448f12d2",
    "metadata": {},
    "outputs": [],
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 17,
    "id": "6afce67e-7ea3-4e62-bb4c-10f03ac4b93a",
    "metadata": {},
    "outputs": [
@@ -603,7 +603,7 @@
        "True"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 18,
    "id": "5c2e0c94-7027-4aa3-91c7-dff0ec2b1a5e",
    "metadata": {},
    "outputs": [],
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 19,
    "id": "11ad34fb-3552-449d-a00d-dac7a029bb27",
    "metadata": {},
    "outputs": [],
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 20,
    "id": "3d4ec270-87b8-4068-aa91-badcc5d6d6f8",
    "metadata": {},
    "outputs": [],
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 21,
    "id": "d586fd0b-ac99-4587-a9aa-9e09c7b22dbc",
    "metadata": {},
    "outputs": [],
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 22,
    "id": "85ec802a-aa94-4808-bdbb-5f7e327ac69f",
    "metadata": {},
    "outputs": [],
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 23,
    "id": "6fab14e0-eb45-43e0-b7fb-ead0493c2d2f",
    "metadata": {},
    "outputs": [],
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 24,
    "id": "524a394c-b1a8-4d85-9fe9-2694eb103f87",
    "metadata": {},
    "outputs": [],
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 25,
    "id": "94050d6d-8938-4945-a77e-c2e0eb07631e",
    "metadata": {},
    "outputs": [],
@@ -740,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 26,
    "id": "77ec36c2-8314-4633-9e59-8a1733fe0d2e",
    "metadata": {},
    "outputs": [],
@@ -755,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 27,
    "id": "b2da805e-33fb-464c-a6f4-b3ea0a35dbaf",
    "metadata": {},
    "outputs": [],
@@ -773,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 28,
    "id": "df066876-939b-4e38-815f-8277e41feadd",
    "metadata": {},
    "outputs": [],
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 29,
    "id": "6b7d25d6-39f9-4016-8e5f-b65b3063e733",
    "metadata": {},
    "outputs": [],
@@ -796,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 30,
    "id": "fcbb3e3c-b6cc-45f9-a512-1ac8f74bbe08",
    "metadata": {},
    "outputs": [],
@@ -808,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 31,
    "id": "e1203e48-236b-45e4-871d-9d82fbc1bc8e",
    "metadata": {},
    "outputs": [],
@@ -818,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 32,
    "id": "867a168d-7085-4c4b-aaca-705da584e380",
    "metadata": {},
    "outputs": [],
@@ -828,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 33,
    "id": "31df9b07-a724-4f47-b660-c69ca1b37eee",
    "metadata": {},
    "outputs": [],
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 34,
    "id": "2090e121-d294-47b8-9044-d260b386abf2",
    "metadata": {},
    "outputs": [],
@@ -857,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 35,
    "id": "16eb54d7-07a3-4d04-9fb1-b8ac65ee420d",
    "metadata": {},
    "outputs": [],
@@ -872,12 +872,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 36,
    "id": "d2caac5f-181c-48ae-bd92-35823fc0145f",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_proposicoes_sem_keywords['keywords'] = df_proposicoes_sem_keywords['keywords'].apply(remove_palavras_origem_biogramas_da_sentenca)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af82bc0a-9099-4842-85fa-bda748cd5e25",
+   "metadata": {},
+   "source": [
+    "Converte lista para string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "301dbfc7-6fca-49d1-9c38-4bd2f68b31e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def converte_lista_string(lista):\n",
+    "    return ', '.join([palavra for palavra in lista])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "28142559-3f9f-4d1a-9e42-006e7a1ac7b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "teste['keywords'] = teste['keywords'].apply(converte_lista_string)"
    ]
   },
   {
@@ -890,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 37,
    "id": "ca695f11-408d-492b-bcc7-6f6610bd2bf0",
    "metadata": {},
    "outputs": [],
@@ -908,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 38,
    "id": "dfebd975-ecb8-4b3d-a615-1a3a04a5bfa0",
    "metadata": {},
    "outputs": [],
@@ -918,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 39,
    "id": "856c311e-09a4-40bc-b96f-220df0c760f5",
    "metadata": {},
    "outputs": [],
@@ -928,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 40,
    "id": "c44336bc-9bd6-40eb-ac2e-ce67dfa4b8c5",
    "metadata": {},
    "outputs": [
@@ -938,7 +967,7 @@
        "(152419, 8)"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
