insere saida de dados

--- a/tratamento-dados/tratamento-proposicoes.ipynb
+++ b/tratamento-dados/tratamento-proposicoes.ipynb
@@ -901,12 +901,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 48,
    "id": "28142559-3f9f-4d1a-9e42-006e7a1ac7b1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "teste['keywords'] = teste['keywords'].apply(converte_lista_string)"
+    "df_proposicoes_sem_keywords['keywords'] = df_proposicoes_sem_keywords['keywords'].apply(converte_lista_string)"
    ]
   },
   {
@@ -947,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 49,
    "id": "856c311e-09a4-40bc-b96f-220df0c760f5",
    "metadata": {},
    "outputs": [],
@@ -974,6 +974,16 @@
    ],
    "source": [
     "df_proposicoes_v_final.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "106b4aed-f9e1-4ddd-a7cc-6d6dcbdc4336",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_proposicoes_v_final.to_csv('../dados/proposicoes_legislativas_limpas.csv')"
    ]
   }
  ],
