normaliza dados de proposicoes com keywords

--- a/tratamento-dados/tratamento-proposicoes.ipynb
+++ b/tratamento-dados/tratamento-proposicoes.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "60b974d7-d1f0-410c-a4ea-32d2baaee348",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "03a43433-f2c8-4275-9ad3-d4638479f339",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "5c293a8b-5cc1-4573-a20e-197259abde89",
    "metadata": {},
    "outputs": [],
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "09989088-961c-4bfc-a0a4-3636e3ae27b3",
    "metadata": {},
    "outputs": [
@@ -109,7 +109,7 @@
        "(680358, 30)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "b077e07c-e2d2-4868-abd1-0dee3a80882b",
    "metadata": {},
    "outputs": [],
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "8a1006b0-a578-40d5-974a-39a9e1f3aacf",
    "metadata": {},
    "outputs": [],
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "17225d4b-f3c2-49dc-afd2-4ed667464b59",
    "metadata": {},
    "outputs": [
@@ -171,7 +171,7 @@
        "(152424, 30)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "61b5f27e-797e-4296-9aca-2bd1b8c78eb3",
    "metadata": {},
    "outputs": [],
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "edabd958-2e7e-410b-94f8-7f446561deff",
    "metadata": {},
    "outputs": [
@@ -211,7 +211,7 @@
        "(152424, 8)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "eb49ff95-e45a-4d86-b1d2-6bc732b6d73c",
    "metadata": {},
    "outputs": [
@@ -248,7 +248,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "5805f5dd-023d-4136-90f7-7471a5e95ed1",
    "metadata": {},
    "outputs": [
@@ -377,7 +377,7 @@
        "571961      NaN  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "62ee15ca-49cc-4349-8c36-c590b6ac7b4f",
    "metadata": {},
    "outputs": [
@@ -506,7 +506,7 @@
        "571961      NaN  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "6a42c0f0-18f1-408c-a7c0-ce3bc7304371",
    "metadata": {},
    "outputs": [],
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "0a6a7653-5a70-43c0-95d1-8c90a51a3610",
    "metadata": {},
    "outputs": [
@@ -537,7 +537,7 @@
        "(152419, 8)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,28 +548,30 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1e48f47-21f6-4a9f-8128-617d812af1aa",
-   "metadata": {},
+   "id": "b5cb50fc-3c3b-4266-acf6-966f765e3cc9",
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "# Extração de palavras chaves das ementas, quando necessário"
+    "# Limpa dados da coluna \"keywords\""
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "53affa49-98c8-48ac-a363-629b98b88143",
+   "id": "bf097768-c44a-4342-b08d-57d0fcffe495",
    "metadata": {},
    "source": [
-    "Identificação de propostas legislativas com campo \"keywords\" vazio"
+    "Identifica propostas legislativas com \"keywords\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "0aa209d9-1781-4dbf-a801-40bd448f12d2",
+   "execution_count": 19,
+   "id": "dfebd975-ecb8-4b3d-a615-1a3a04a5bfa0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_proposicoes_sem_keywords = df_proposicoes[df_proposicoes['keywords'].isna()].copy()"
+    "df_proposicoes_com_keywords = df_proposicoes[df_proposicoes['keywords'].notna()].copy()"
    ]
   },
   {
@@ -577,12 +579,12 @@
    "id": "19e794b2-2c66-4a8d-89a4-9b885a1aab58",
    "metadata": {},
    "source": [
-    "Processamento da coluna \"ementa\" para extração de palavras chaves e preenchimento da coluna \"keywords\""
+    "Download dos pacotes realtivos a \"stopwords\" e pontuação da biblioteca NLTK"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "id": "6afce67e-7ea3-4e62-bb4c-10f03ac4b93a",
    "metadata": {},
    "outputs": [
@@ -603,7 +605,7 @@
        "True"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -615,15 +617,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa1019ee-4748-4fc1-8d45-3047f12fb7d9",
+   "id": "9fe2b346-637a-4e20-9da2-f79d803225ce",
    "metadata": {},
    "source": [
-    "Remoção de pontuação, preposições e artigos (stopwords)"
+    "Remove pontuação, preposições e artigos (stopwords)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "id": "5c2e0c94-7027-4aa3-91c7-dff0ec2b1a5e",
    "metadata": {},
    "outputs": [],
@@ -633,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "id": "11ad34fb-3552-449d-a00d-dac7a029bb27",
    "metadata": {},
    "outputs": [],
@@ -647,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "id": "3d4ec270-87b8-4068-aa91-badcc5d6d6f8",
    "metadata": {},
    "outputs": [],
@@ -663,7 +665,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
+   "id": "7b5ab9eb-b0f8-46fc-9f04-425fea62b5b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_proposicoes_com_keywords['keywords'] = df_proposicoes_com_keywords['keywords'].apply(remove_stopwords_punctuation_da_sentenca)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "399a57bc-1bcc-4c31-b84f-64bafb9873fa",
+   "metadata": {},
+   "source": [
+    "Converte lista para string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "42aa1573-57b2-47e0-bdf5-195df75aeda3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def converte_lista_string(lista):\n",
+    "    return ', '.join([palavra for palavra in lista])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "8c6b13d4-639a-4782-889d-e288ee55b511",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_proposicoes_com_keywords['keywords'] = df_proposicoes_com_keywords['keywords'].apply(converte_lista_string)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c1e48f47-21f6-4a9f-8128-617d812af1aa",
+   "metadata": {},
+   "source": [
+    "# Extração de palavras chaves das ementas, quando necessário"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53affa49-98c8-48ac-a363-629b98b88143",
+   "metadata": {},
+   "source": [
+    "Identificação de propostas legislativas com campo \"keywords\" vazio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "0aa209d9-1781-4dbf-a801-40bd448f12d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_proposicoes_sem_keywords = df_proposicoes[df_proposicoes['keywords'].isna()].copy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa1019ee-4748-4fc1-8d45-3047f12fb7d9",
+   "metadata": {},
+   "source": [
+    "Remoção de pontuação, preposições e artigos (stopwords)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "id": "d586fd0b-ac99-4587-a9aa-9e09c7b22dbc",
    "metadata": {},
    "outputs": [],
@@ -681,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "id": "85ec802a-aa94-4808-bdbb-5f7e327ac69f",
    "metadata": {},
    "outputs": [],
@@ -693,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 31,
    "id": "6fab14e0-eb45-43e0-b7fb-ead0493c2d2f",
    "metadata": {},
    "outputs": [],
@@ -712,12 +787,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 41,
    "id": "524a394c-b1a8-4d85-9fe9-2694eb103f87",
    "metadata": {},
    "outputs": [],
    "source": [
-    "substantivos = ['rio', 'sul', 'cão', 'mãe', 'oab', 'boa', 'pré', 'voz', 'rui', 'uva', 'gás', 'glp', 'apa']"
+    "substantivos = ['cão', 'mãe', 'oab', 'boa', 'pré', 'voz', 'rui', 'uva', 'gás', 'glp', 'apa']"
    ]
   },
   {
@@ -730,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 42,
    "id": "94050d6d-8938-4945-a77e-c2e0eb07631e",
    "metadata": {},
    "outputs": [],
@@ -740,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 43,
    "id": "77ec36c2-8314-4633-9e59-8a1733fe0d2e",
    "metadata": {},
    "outputs": [],
@@ -755,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 44,
    "id": "b2da805e-33fb-464c-a6f4-b3ea0a35dbaf",
    "metadata": {},
    "outputs": [],
@@ -773,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 45,
    "id": "df066876-939b-4e38-815f-8277e41feadd",
    "metadata": {},
    "outputs": [],
@@ -786,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 46,
    "id": "6b7d25d6-39f9-4016-8e5f-b65b3063e733",
    "metadata": {},
    "outputs": [],
@@ -796,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 47,
    "id": "fcbb3e3c-b6cc-45f9-a512-1ac8f74bbe08",
    "metadata": {},
    "outputs": [],
@@ -808,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 48,
    "id": "e1203e48-236b-45e4-871d-9d82fbc1bc8e",
    "metadata": {},
    "outputs": [],
@@ -818,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 49,
    "id": "867a168d-7085-4c4b-aaca-705da584e380",
    "metadata": {},
    "outputs": [],
@@ -828,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 50,
    "id": "31df9b07-a724-4f47-b660-c69ca1b37eee",
    "metadata": {},
    "outputs": [],
@@ -845,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 51,
    "id": "2090e121-d294-47b8-9044-d260b386abf2",
    "metadata": {},
    "outputs": [],
@@ -857,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 52,
    "id": "16eb54d7-07a3-4d04-9fb1-b8ac65ee420d",
    "metadata": {},
    "outputs": [],
@@ -872,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 53,
    "id": "d2caac5f-181c-48ae-bd92-35823fc0145f",
    "metadata": {},
    "outputs": [],
@@ -890,18 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "301dbfc7-6fca-49d1-9c38-4bd2f68b31e5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def converte_lista_string(lista):\n",
-    "    return ', '.join([palavra for palavra in lista])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 55,
    "id": "28142559-3f9f-4d1a-9e42-006e7a1ac7b1",
    "metadata": {},
    "outputs": [],
@@ -919,6 +983,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 60,
+   "id": "44227261-f038-4a1f-bc1c-35fcb71b9a15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_proposicoes_sem_keywords = df_proposicoes_sem_keywords.drop(columns=['bigrams'])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 37,
    "id": "ca695f11-408d-492b-bcc7-6f6610bd2bf0",
    "metadata": {},
@@ -932,22 +1006,12 @@
    "id": "463eafed-3ab7-4d69-b7c9-096c3b04d983",
    "metadata": {},
    "source": [
-    "Reuni proposição com keywords retiradas da ementa com restante das proposições legislativas"
+    "# Reuni dados em um único dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "dfebd975-ecb8-4b3d-a615-1a3a04a5bfa0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_proposicoes_com_keywords = df_proposicoes[df_proposicoes['keywords'].notna()].copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 64,
    "id": "856c311e-09a4-40bc-b96f-220df0c760f5",
    "metadata": {},
    "outputs": [],
@@ -957,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 65,
    "id": "c44336bc-9bd6-40eb-ac2e-ce67dfa4b8c5",
    "metadata": {},
    "outputs": [
@@ -967,7 +1031,7 @@
        "(152419, 8)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -978,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 66,
    "id": "106b4aed-f9e1-4ddd-a7cc-6d6dcbdc4336",
    "metadata": {},
    "outputs": [],
